auto-test/tests/chapter_18/invalid_types/incompatible_types/branch_mismatch_2.c
struct s {
    int a;
};

int main(void) {
    struct s x = {1};
    
    1 ? x : (void) 2;
}